--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,5 @@ rand = "0.9.0"
 [dev-dependencies]
 # Tests
 reqwest = { version = "0.12.14", features = ["json"] }
+serde_json = "1.0"
+tokio = { version = "1.32", features = ["full", "test-util"] }
